macos bugfixes: #151 dark mode detection in night shift + adding menubar to extensions menu + padding-left with tabs to give traffic lights space

--- a/mods/core/css/tabs.css
+++ b/mods/core/css/tabs.css
@@ -75,6 +75,9 @@ body,
   flex-direction: column;
 }
 
+[data-platform='darwin'] #titlebar {
+  padding-left: 4em;
+}
 #titlebar::before {
   content: '';
   position: absolute;
